prometheus-stack/templates/promptail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail
  labels:
    app: promtail
spec:
  selector:
    app: promtail
  ports:
    - name: http
      port: 3101
      targetPort: 3101
