prometheus-stack/templates/promptail/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail
  labels:
    app: promtail
spec:
  podSelector:
    matchLabels:
      app: promtail
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
